Add run task in gradle